--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,12 @@
 <header></header>
 <sidebar></sidebar>
 <section class="main-section">
-
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-12">
+                <app-tabs></app-tabs>
+            </div>
+        </div>
+    </div>
 </section>
 <footer></footer>
