--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,9 +1,11 @@
-<a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
-    <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">{{name}}</h5>
-        <div>
-        	<button class="btn btn-primary">Light</button>
-        	<button class="btn btn-danger">Dark</button>
+<div class="list-group-item">
+    <div class="row">
+        <div class="col-xs-12 col-sm-6">
+            <h5 class="mb-1">{{character.name}}</h5>
+        </div>
+        <div class="col-xs-12 col-sm-6 text-right">
+            <button class="btn btn-primary" (click)="onAssign('light')">Light</button>
+            <button class="btn btn-danger" (click)="onAssign('dark')">Dark</button>
         </div>
     </div>
-</a>
+</div>
