--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,3 +1,4 @@
 <div class="list-group">
-    <app-item *ngFor="let char of characters"></app-item>
+    <app-item *ngFor="let char of characters" [character]="char">
+    </app-item>
 </div>
