--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,8 +1,16 @@
 <div class="sidebar">
     <ul>
-        <li><i class="fa fa-home fa-lg"></i><br/><a href="">Home</a></li>
-        <li><i class="fa fa-list fa-lg"></i><br/><a href="">Details</a></li>
-        <li><i class="fa fa-phone fa-lg"></i><br/><a href="">Contact</a></li>
-        <li><i class="fa fa-globe fa-lg"></i><br/><a href="">About</a></li>
+        <li routerLinkActive="active" routerLink="/characters">
+            <i class="fa fa-home fa-lg"></i><br/>Home
+        </li>
+        <li routerLinkActive="active" routerLink="/new-character">
+            <i class="fa fa-list fa-lg"></i><br/>Add New
+        </li>
+        <li routerLinkActive="active" routerLink="/contact">
+            <i class="fa fa-phone fa-lg"></i><br/>Contact
+        </li>
+        <li routerLinkActive="active" routerLink="/about">
+            <i class="fa fa-globe fa-lg"></i><br/>About
+        </li>
     </ul>
 </div>
