--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -19,7 +19,7 @@
 .sidebar ul li {
     position: relative;
     width: 100%;
-    background-color: #999;
+    background-color: #eee;
     margin-top: 2px;
     height: auto;
     padding: 10px 0;
@@ -27,21 +27,25 @@
     text-align: center;
 }
 
-.sidebar ul li:hover {
-    background-color: #202020;
+.sidebar ul li:hover,
+.sidebar ul li.active {
+    background-color: #7D9;
     color: #FFF;
     transition: .5s;
+    cursor: pointer;
 }
 
 .sidebar ul li a {
     color: #000;
     padding: 10px;
-    font-weight: bold;
     text-decoration: none;
     transition: .5s;
+    text-align: center;
+    margin: auto;
 }
 
-.sidebar ul li:hover a {
+.sidebar ul li:hover a,
+.sidebar ul li.active a {
     color: #FFF;
     transition: .5s;
 }
