--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,16 +1,16 @@
 <div class="sidebar">
     <ul>
         <li routerLinkActive="active" routerLink="/characters">
-            <i class="fa fa-home fa-lg"></i><br/>Home
+            <i class="fa fa-home fa-2x"></i><br/>Home
         </li>
         <li routerLinkActive="active" routerLink="/new-character">
-            <i class="fa fa-list fa-lg"></i><br/>Add New
+            <i class="fa fa-list fa-2x"></i><br/>Add New
         </li>
         <li routerLinkActive="active" routerLink="/contact">
-            <i class="fa fa-phone fa-lg"></i><br/>Contact
+            <i class="fa fa-phone fa-2x"></i><br/>Contact
         </li>
         <li routerLinkActive="active" routerLink="/about">
-            <i class="fa fa-globe fa-lg"></i><br/>About
+            <i class="fa fa-globe fa-2x"></i><br/>About
         </li>
     </ul>
 </div>
