updated from office

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,8 +4,8 @@
     </div>
     <div class="panel-body">
         <div class="col-xs-12">
-            <h1>Share Your Views</h1>
-            <p class="small"><b>||</b> send us an email for any query</p>
+            <h1>{{title}}</h1>
+            <p class="small"><b>||&nbsp;</b>{{subtitle}}</p>
             <hr/>
         </div>
         <div class="col-xs-12">
