--- a/src/app/create-character/create-character.component.html
+++ b/src/app/create-character/create-character.component.html
@@ -5,7 +5,7 @@
     <div class="panel-body">
         <div class="col-xs-12">
             <h1>{{title}}</h1>
-            <p class="small"><b>||</b> you can add someone to our team</p>
+            <p class="small"><b>||&nbsp;</b>{{subtitle}}</p>
             <hr/>
         </div>
         <div class="col-xs-12">
@@ -17,10 +17,10 @@
                 <div class="form-group">
                     <label for="side" class="label-control">Choose Side</label>
                     <select id="side" name="side" class="form-control" ngModel>
-                  <option *ngFor="let option of availableSides" [value]="option.value">
-                    {{ option.display }}
-                  </option>
-                </select>
+						<option *ngFor="let option of availableSides" [value]="option.value">
+							{{ option.display }}
+						</option>
+					</select>
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-success" [disabled]="form.invalid">Add Character</button>
