--- a/src/app/notfound/notfound.component.html
+++ b/src/app/notfound/notfound.component.html
@@ -1,11 +1,13 @@
 <div class="panel panel-danger">
     <div class="panel-heading">
-        <h2>It's always better not to lose hope ..!!</h2>
+        <h2>{{title}}</h2>
     </div>
     <div class="panel-body">
         <div class="col-xs-12">
             <div class="jumbotron text-center">
-                <h1><code>404 : Not Found</code></h1>
+                <h1>
+                    <code>404<br/>Not Found</code>
+                </h1>
             </div>
         </div>
     </div>
