--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,8 +4,8 @@
     </div>
     <div class="panel-body">
         <div class="col-xs-12">
-            <h1>Know About Us </h1>
-            <p class="small"><b>||</b> read about our vision, mission &amp; goal</p>
+            <h1>{{title}}</h1>
+            <p class="small"><b>||&nbsp;</b>{{subtitle}}</p>
             <hr/>
         </div>
         <div class="col-xs-12">
