--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,5 +1,10 @@
 <div class="list-group-item">
-    <div class="row">
+    <div *ngIf="character.name == 'error'" class="row">
+        <div class="col-xs-12">
+            <h1 class="text-center"><i class="fa fa-spinner fa-spin fa-lg"></i>&nbsp;Loading...</h1>
+        </div>
+    </div>
+    <div *ngIf="character.name != 'error'" class="row">
         <div class="col-xs-12 col-sm-6">
             <h5 class="mb-1">{{character.name}}</h5>
         </div>
