--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -4,8 +4,8 @@
     </div>
     <div class="panel-body">
         <div class="col-xs-12">
-            <h1>Find Us All</h1>
-            <p class="small"><b>||</b> know details about us</p>
+            <h1>{{title}}</h1>
+            <p class="small"><b>||&nbsp;</b>{{subtitle}}</p>
             <hr/>
         </div>
         <div class="col-xs-12">
