--- a/src/app/create-character/create-character.component.html
+++ b/src/app/create-character/create-character.component.html
@@ -2,7 +2,12 @@
     <div class="panel-heading">
         <h2>It's always better to have someone new.. !!</h2>
     </div>
-    <div class="panel-body">
+    <div class="panel-body" *ngIf="formSubmitted">
+        <div class="col-xs-12">
+            <h1 class="alert alert-success">Added Successfully..!!</h1>
+        </div>
+    </div>
+    <div class="panel-body" *ngIf="!formSubmitted">
         <div class="col-xs-12">
             <h1>{{title}}</h1>
             <p class="small"><b>||&nbsp;</b>{{subtitle}}</p>
