updated from office

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -6,6 +6,9 @@
         <li routerLinkActive="active" routerLink="/new-character">
             <i class="fa fa-list fa-2x"></i><br/>Add New
         </li>
+        <li routerLinkActive="active" routerLink="/project">
+            <i class="fa fa-dashboard fa-2x"></i><br/>Project
+        </li>
         <li routerLinkActive="active" routerLink="/contact">
             <i class="fa fa-phone fa-2x"></i><br/>Contact
         </li>
