--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,13 +1,18 @@
 <div class="header">
     <div class="row">
         <div class="col-xs-4 col-sm-4 first">
-            <button type="button" class="btn btn-success btn-lg">ADD GAME</button>
+            <button type="button" (click)="showAddForm()" class="btn btn-success btn-lg">ADD GAME</button>
         </div>
         <div class="col-xs-4 col-sm-4 middle">
             <img src="../../assets/img/logo.png" alt="logo" class="logo img img-responsive">
         </div>
         <div class="col-xs-4 col-sm-4 text-right last">
             <h4><strong><i class="fa fa-user-circle fa-lg"></i>&nbsp;&nbsp;PROFILE</strong></h4>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12 col-sm-12">
+            <app-add-game [addFormMain]="addForm" (newAddFormMain)="onStatusChanged($event)"></app-add-game>
         </div>
     </div>
 
@@ -19,8 +24,8 @@
                 <div class="col-xs-12 col-sm-6" style="margin-bottom:5px;">
                     <select class="form-control" (change)="onSearchChange($event.target.value)">
                       <option value="all">All</option>
-                      <option value="avail">Avail</option>
-                      <option value="unavail">Unavail</option>
+                      <option value="avail">Available</option>
+                      <option value="unavail">Unavailable</option>
                     </select>
                     <div class="input-group">
                         <input class="form-control" type="text" name="search" id="search" (input)="doSearch($event.target.value)" [(ngModel)]="str" required #searchCtrl="ngModel" placeholder="Search by Name" />
@@ -86,6 +91,7 @@
                     </td>
                     <td><br/>
                         <button type="button" (click)="showDetail(i)" class="btn btn-primary listButton"><i class="fa fa-eye"></i></button>
+                        <button type="button" *ngIf="showConfirm==i" (click)="confirmDelete(i)" class="btn btn-danger listButton"><i class="fa fa-check"></i>Confirm</button>
                         <button type="button" (click)="delete(i)" class="btn btn-danger listButton"><i class="fa fa-times"></i></button>
                     </td>
                 </tr>
