updated from office

--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -91,7 +91,7 @@
                     </td>
                     <td><br/>
                         <button type="button" (click)="showDetail(i)" class="btn btn-primary listButton"><i class="fa fa-eye"></i></button>
-                        <button type="button" *ngIf="showConfirm==i" (click)="confirmDelete(i)" class="btn btn-danger listButton"><i class="fa fa-check"></i>Confirm</button>
+                        <button type="button" *ngIf="showConfirm==i" (click)="confirmDelete(i)" class="btn btn-danger listButton"><i class="fa fa-check"></i>&nbsp;&nbsp;Confirm</button>
                         <button type="button" (click)="delete(i)" class="btn btn-danger listButton"><i class="fa fa-times"></i></button>
                     </td>
                 </tr>
