--- a/src/app/add-game/add-game.component.html
+++ b/src/app/add-game/add-game.component.html
@@ -7,19 +7,19 @@
 <div class="addFormStyle" [ngClass]="addFormMain?'addFormStyleAdd':'addFormStyleRemove'">
     <h1 class="text-center">Add Game Information</h1>
     <hr/>
-    <form>
+    <form (ngSubmit)="addGame(form)" #form="ngForm">
         <div class="col-xs-12 col-sm-6">
             <div class="form-group">
                 <label for="name">Name</label>
-                <input class="form-control" type="text" name="name" required="required" />
+                <input class="form-control" type="text" name="name" required="required" ngModel #name="ngModel" />
             </div>
             <div class="form-group">
                 <label for="owner">Owner</label>
-                <input class="form-control" type="text" name="owner" required="required" />
+                <input class="form-control" type="text" name="owner" required="required" ngModel #owner="ngModel" />
             </div>
             <div class="form-group">
                 <label for="description">Description</label>
-                <textarea name="description" class="form-control" rows="5" style="resize:none"></textarea>
+                <textarea name="description" class="form-control" rows="5" style="resize:none" ngModel></textarea>
             </div>
         </div>
         <div class="col-xs-12 col-sm-6">
@@ -35,33 +35,26 @@
             </div>
             <div class="form-group">
                 <label for="platform">Platform</label>
-                <select name="platform" class="form-control" required="required">
-                    <option value="none">Select Platform</option>
-                    <option value="xbox">Xbox</option>
-                    <option value="ios">IOS</option>
-                    <option value="playstation">Play Station</option>
-                    <option value="android">Android</option>
-                    <option value="windows">Windows</option>
+                <select name="platform" class="form-control" required="required" [(ngModel)]="selectedPlatform" name="platform">
+                    <option *ngFor="let option of platformOptions" [ngValue]="option.value">{{option.display}}</option>
                 </select>
             </div>
             <div class="form-group">
                 <label for="availability">Availability</label>
-                <select name="availability" class="form-control">
-                    <option value="none">Select Availability</option>
-                    <option value="avail">Available</option>
-                    <option value="unavail">Unavailable</option>
+                <select name="availability" class="form-control" [(ngModel)]="selectedAvailability" name="availability">
+                    <option *ngFor="let option of availabilityOptions" [ngValue]="option.value">{{option.display}}</option>
                 </select>
             </div>
             <div class="form-group">
                 <label for="image_url">Image URL</label>
-                <input class="form-control" type="text" name="image_url" required="required" />
+                <input class="form-control" type="text" name="image_url" required="required" ngModel />
             </div>
         </div>
         <div class="col-xs-12 col-sm-12">
             <div class="form-group text-right">
                 <hr/>
-                <button type="button" class="btn btn-success btn-lg"><i class="fa fa-save fa-lg"></i>&nbsp;Save</button>
-                <button type="button" (click)="removeAddForm()" class="btn btn-danger btn-lg"><i class="fa fa-times fa-lg"></i>&nbsp;Cancel</button>
+                <button type="submit" class="btn btn-success btn-lg"><i class="fa fa-save fa-lg"></i>&nbsp;&nbsp;Save</button>
+                <button type="button" (click)="removeAddForm()" class="btn btn-danger btn-lg"><i class="fa fa-times fa-lg"></i>&nbsp;&nbsp;Cancel</button>
             </div>
         </div>
     </form>
