updated from office

--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -16,6 +16,12 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col-xs-12 col-sm-12">
+            <app-detail-game></app-detail-game>
+        </div>
+    </div>
+
     <!-- <app-slider></app-slider> -->
 
     <div class="row">
