--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -16,4 +16,7 @@
             <i class="fa fa-globe fa-2x"></i><br/>About
         </li>
     </ul>
+    <div class="copyright">
+        <p><code>version 1.0.0</code></p>
+    </div>
 </div>
