--- a/src/app/add-game/add-game.component.html
+++ b/src/app/add-game/add-game.component.html
@@ -21,12 +21,13 @@
         <div class="col-xs-12 col-sm-6">
             <div class="form-group">
                 <label for="rating">Rating</label>
+                <input class="form-control" type="hidden" name="rating" [ngModel]="starSelected" />
                 <p class="form-control add-rating" style="background-color:green">
-                    <i class="addYellow fa fa-star fa-lg"></i>&nbsp;
-                    <i class="addYellow fa fa-star fa-lg"></i>&nbsp;
-                    <i class="addYellow fa fa-star fa-lg"></i>&nbsp;
-                    <i class="addYellow fa fa-star fa-lg"></i>&nbsp;
-                    <i class="addYellow fa fa-star fa-lg"></i>
+                    <i (click)="star(1)" [ngClass]="rate1?'addYellow':''" class="fa fa-star fa-lg"></i>&nbsp;
+                    <i (click)="star(2)" [ngClass]="rate2?'addYellow':''" class="fa fa-star fa-lg"></i>&nbsp;
+                    <i (click)="star(3)" [ngClass]="rate3?'addYellow':''" class="fa fa-star fa-lg"></i>&nbsp;
+                    <i (click)="star(4)" [ngClass]="rate4?'addYellow':''" class="fa fa-star fa-lg"></i>&nbsp;
+                    <i (click)="star(5)" [ngClass]="rate5?'addYellow':''" class="fa fa-star fa-lg"></i>
                 </p>
             </div>
             <div class="form-group">
