updated from office

--- a/src/app/add-game/add-game.component.css
+++ b/src/app/add-game/add-game.component.css
@@ -6,7 +6,7 @@
     height: auto;
     padding: 10px 15px;
     border: 1px solid white;
-    background-color: green;
+    background-color: #5DA93C;
     color: #ffffff;
     z-index: 99;
     transition: .5s;
