--- a/src/app/detail-game/detail-game.component.html
+++ b/src/app/detail-game/detail-game.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="form-group">
             <label for="rating">Rating</label>
-            <p class="add-rating" style="background-color:green">
+            <p class="add-rating" style="background-color:#5DA93C">
                 <span class="rating">
                     <i class="{{data.rating>=1?'addYellow':''}} fa fa-star"></i>&nbsp;
                     <i class="{{data.rating>=2?'addYellow':''}} fa fa-star"></i>&nbsp;
